<resources>
    <string name="app_name">diploma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="description_hint">add description</string>
    <string name="finished_str">finished tasks</string>

    <string name="alertDialog_title">Finish the task</string>
    <string name="alertDialog_msg">Is the task completed? Select the appropriate status:</string>
    <string name="alertDialog_cancel">Cancel</string>
    <string name="alertDialog_unsatis">Unsatisfactory</string>
    <string name="alertDialog_partly">Partially</string>
    <string name="alertDialog_success">Success</string>

    <string name="confirm_delete">Delete?</string>
    <string name="confirm_yes">yes</string>
    <string name="confirm_no">no</string>


    <string name="task_notStarted">not started</string>
    <string name="task_inProcess">in process</string>
    <string name="task_unsatis">unsatisfactory result</string>
    <string name="task_partly">partly completed</string>
    <string name="task_success">finished successfully</string>

    <string name="limit_msg">limit for the day has been reached</string>


</resources>