<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/alertDialog_clc1">
    <LinearLayout
        android:background="@drawable/combinated_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/alertDialog_msg"
            android:textColor="@color/alertDialog_clc4"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/alertDialog_cancel"
                android:textColor="@color/alertDialog_clc3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/buttonUnsatisfactory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertDialog_unsatis"
                android:textSize="16sp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/alertDialog_clc3"
                android:gravity="center"/>

            <TextView
                android:id="@+id/buttonPartially"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertDialog_partly"
                android:textSize="16sp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/alertDialog_clc3"
                android:gravity="center"/>

            <TextView
                android:id="@+id/buttonSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alertDialog_success"
                android:textSize="16sp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/alertDialog_clc3"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
