<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:srcCompat="@drawable/alert_bcg3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/alertDialog_clc13"
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:text="@string/confirm_delete"
            android:textAlignment="center"
            android:textColor="@color/alertDialog_clc9"
            android:textSize="32sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            app:srcCompat="@drawable/empty_divider_48" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/alertDialog_clc9"
                android:backgroundTint="@color/alertDialog_clc8"
                android:text="@string/confirm_no" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/empty_divider_48" />

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textColor="@color/alertDialog_clc9"
                android:backgroundTint="@color/alertDialog_clc8"
                android:text="@string/confirm_yes" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>